--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "dev": "cross-env DEBUG=nodeapi:* node ./bin/www"
+    "start": "nodemon ./bin/www",
+    "dev": "cross-env DEBUG=nodeapi:* nodemon ./bin/www"
   },
   "dependencies": {
     "body-parser": "~1.18.2",
