--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "cross-env DEBUG=nodeapi:* node ./bin/www"
+    "dev": "cross-env DEBUG=nodeapi:* nodemon ./bin/www"
   },
   "dependencies": {
     "body-parser": "~1.18.2",
