--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "~4.15.5",
+    "express-validator": "^5.0.1",
     "mongoose": "^5.0.6",
     "morgan": "~1.9.0",
     "serve-favicon": "~2.4.5"
