--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "nodemon ./bin/www",
-    "dev": "cross-env DEBUG=nodepop:* nodemon ./bin/www"
+    "dev": "cross-env DEBUG=nodepop:* nodemon ./bin/www",
+    "installdb": "node ./bin/install_db"
   },
   "dependencies": {
     "body-parser": "~1.18.2",
