--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "cross-env": "^5.1.3",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
-    "express": "~4.15.5",
+    "express": "^4.17.1",
     "express-validator": "^5.0.1",
-    "mongoose": "^5.0.6",
-    "morgan": "~1.9.0",
+    "mongoose": "^5.7.4",
+    "morgan": "^1.9.1",
     "serve-favicon": "~2.4.5"
   }
 }
